--- a/test/ceph/common/CMakeLists.txt
+++ b/test/ceph/common/CMakeLists.txt
@@ -8,3 +8,26 @@ target_link_libraries(
   global
   ${BLKID_LIBRARIES}
 )
+
+# test_config
+add_executable(
+  test_config
+  test_config.cc
+)
+target_link_libraries(
+  test_config
+#  ceph-common
+  global
+  ${BLKID_LIBRARIES}
+#  ${EXTRALIBS}
+)
+
+# test_perf_counter
+add_executable(
+  test_perf_counters
+  test_perf_counters.cc
+)
+target_link_libraries(
+  test_perf_counters
+  global
+)
