modified:   test/ceph/CMakeLists.txt modified:   test/ceph/common/CMakeLists.txt new file:   test/ceph/common/sk_test_buffer.cc new file:   test/ceph/common/sk_test_ceph_clock.cc new file:   test/ceph/common/sk_test_clock.cc

--- a/test/ceph/CMakeLists.txt
+++ b/test/ceph/CMakeLists.txt
@@ -1,6 +1,6 @@
-add_subdirectory(mon)
-add_subdirectory(osd)
-add_subdirectory(os)
+#add_subdirectory(mon)
+#add_subdirectory(osd)
+#add_subdirectory(os)
 add_subdirectory(common)
 
 # test
